--- a/FrontEnd/AngApp/src/app/menu/menu.component.html
+++ b/FrontEnd/AngApp/src/app/menu/menu.component.html
@@ -1,5 +1,7 @@
 <div class="topnav">
-  <a routerLink="home" >Home</a>
-  <a routerLink="users" >Users</a>
-  <a routerLink="map" >Map</a>
+  <a routerLink="home" routerLinkActive="current">Home</a>
+  <a routerLink="users" routerLinkActive="current">Users</a>
+  <a routerLink="map" routerLinkActive="current">Map</a>
 </div>
+<span class="welcome">Welcome to LRS Project</span>
+
