--- a/FrontEnd/AngApp/src/app/app.component.html
+++ b/FrontEnd/AngApp/src/app/app.component.html
@@ -1,14 +1,9 @@
-<!-- Toolbar -->
-<div class="toolbar" role="banner">
-  <h5>Welcome</h5>
-  <div class="container">
-        <app-menu></app-menu>
-  </div>
+<div class="toolbar">
+  <app-menu></app-menu>
 </div>
-
-
-<div class="content" role="main">
+<div class="main">
   <router-outlet></router-outlet>
 </div>
-<app-messages></app-messages>
-
+<div class="message">
+  <app-messages></app-messages>
+</div>
