--- a/FrontEnd/AngApp/src/app/user-detail/user-detail.component.html
+++ b/FrontEnd/AngApp/src/app/user-detail/user-detail.component.html
@@ -31,7 +31,6 @@
     </tr>
     <tr>
       <th scope="row">Active</th>
-      <!-- <td><input id="Active" type="checkbox" [(ngModel)]="user.isActive" placeholder="Active"/></td> -->
       <td><input id="Active" #isActive [(ngModel)]="user.isActive" placeholder="Active"/></td>
     </tr>
   </tbody>
@@ -39,13 +38,11 @@
 <br>
 <br>
 
+<div><button type="button" (click)="save()">Update</button><button type="button" (click)="delete()">Delete</button></div>
 
-<button type="button" (click)="save()">Update</button>
+<br>
+<br>
+<button type="button" (click)="goBack()">Go Back</button>
 
-<br>
-<br>
-<button type="button" (click)="goBack()">Back</button>
-<br>
-<br>
-<button type="button" (click)="delete()">Delete</button>
+
 
