--- a/FrontEnd/AngApp/src/app/users/users.component.css
+++ b/FrontEnd/AngApp/src/app/users/users.component.css
@@ -7,32 +7,20 @@ table {
 width: 100%;
 }
 
-th,td {
+th, td {
   padding: 5px;
   text-align: center;
-}
-
-
-tr:hover {background-color: rgb(182, 184, 194);}
-ul {
-  padding: 0;
-}
-
-li {
-  display: list-item;
-  list-style-type:square;
-  list-style-position:outside;
 }
 
 button {
   padding:5px 5px;
   margin:5px 5px;
-  background-color:#e3e7fd;
+  background-color:#dcdbecfa;
   text-align:center;
   border-radius: 5px;
+  border-color:black;
 }
 
 button:hover {
-  background-color:#7f9cd1;
+  background-color:#756de6fa;
 }
-
