fixed user type, title bindings

--- a/FrontEnd/AngApp/src/app/map/map.component.css
+++ b/FrontEnd/AngApp/src/app/map/map.component.css
@@ -12,3 +12,14 @@
   width: 100%;
 }
 
+.map{
+  margin:0 0 0 0;
+
+ /*  height: 700px;
+  display: block;
+  position: fixed;
+  top: 100px;
+  left: 50px;
+  right: 50px; */
+}
+
