--- a/FrontEnd/AngApp/src/app/app.component.css
+++ b/FrontEnd/AngApp/src/app/app.component.css
@@ -43,26 +43,28 @@ p {
   /* font-weight: 600; */
 }
 .main {
-  /* display: flex;
+  display: flex;
   margin: 82px auto 32px;
   padding: 0 16px;
-  max-width: 960px; */
-  height: 700px;
+  max-width: 960px;
+
   /* flex-direction: column;
   align-items: center; */
+  /* height: 700px;
   display: block;
   position: fixed;
   top: 100px;
   left: 50px;
-  right: 50px;
+  right: 50px; */
 }
 .message {
-  height: 70px;
+/*   height: 270px;
   display: block;
   position: fixed;
   bottom: 70px;
   left: 50px;
-  right: 50px;
+  right: 50px; */
+  display: flex;
 }
 
 
