--- a/FrontEnd/src/app/app.component.css
+++ b/FrontEnd/src/app/app.component.css
@@ -48,26 +48,23 @@ p {
   padding: 0 16px;
   max-width: 960px;
 
+
+}
+.map {
+ /*  display: flex;
+  margin: 82px auto 32px;
+  padding: 0 16px;
+  max-width: 960px;
+ */
   /* flex-direction: column;
   align-items: center; */
-  /* height: 700px;
-  display: block;
+  height: 700px;
+  /*display: block;
   position: fixed;
   top: 100px;
   left: 50px;
   right: 50px; */
 }
-.message {
-/*   height: 270px;
-  display: block;
-  position: fixed;
-  bottom: 70px;
-  left: 50px;
-  right: 50px; */
-  display: flex;
-}
-
-
 
 
 
