--- a/FrontEnd/src/app/app.component.html
+++ b/FrontEnd/src/app/app.component.html
@@ -1,9 +1,11 @@
 <div class="toolbar">
   <app-menu></app-menu>
 </div>
-<div class="main" >
+
+<div class="main" *ngIf="isMap()==false">
   <router-outlet></router-outlet>
 </div>
-<div class="message" >
-  <app-messages></app-messages>
+<div class="map" *ngIf="isMap()==true">
+  <router-outlet></router-outlet>
 </div>
+
