generic rep, unitofwork, service

--- a/FrontEnd/src/app/users/users.component.html
+++ b/FrontEnd/src/app/users/users.component.html
@@ -19,7 +19,8 @@
 
 <br>
 <br>
-<div><button *ngIf="results==false"> <a routerLink="/addnew"></a>Add</button></div>
+<div>
+  <a routerLink="/../addnew"><button *ngIf="results==false"> Add</button></a></div>
 <br>
 <br>
 
