folder restructure, test message

--- a/FrontEnd/src/app/userfiles/user-add/user-add.component.html
+++ b/FrontEnd/src/app/userfiles/user-add/user-add.component.html
@@ -34,12 +34,13 @@
     </tr>
   </tbody>
 </table>
-<br>
-<br>
 
+<div class="warning">{{warningmsg}}</div>
+
+<div>
 <button (click)="addnew(nuser)">Save</button>
 
 <br>
 <br>
-<button (click)="goBack()">Go Back</button>
+<button (click)="goBack()">Go Back</button></div>
 
