--- a/FrontEnd/src/app/userfiles/user-add/user-add.component.css
+++ b/FrontEnd/src/app/userfiles/user-add/user-add.component.css
@@ -2,8 +2,12 @@ table, thead, th, td {
   border: 1px solid;
   border-collapse: collapse;
   padding: 5px;
+
 }
 
+table{
+  margin-bottom: 20px;
+}
 caption {
   font-size: large;
   font-weight: bold;
@@ -31,6 +35,15 @@ button:hover {
 input{
   border:none;
   width:250px;
+
+}
+
+.warning{
+  font-weight: bold;
+  margin-bottom:10px;
+  color: red;
+  height: 20px;
+  padding-left: 10px;
 
 }
 
