css and alert fixes

--- a/FrontEnd/src/app/navfiles/menu/menu.component.html
+++ b/FrontEnd/src/app/navfiles/menu/menu.component.html
@@ -1,7 +1,9 @@
-<div class="topnav">
+<div class="container">
+<div class="navbuttons">
   <a routerLink="home" routerLinkActive="current">Home</a>
   <a routerLink="users" routerLinkActive="current">Users</a>
   <a routerLink="map" routerLinkActive="current">Map</a>
 </div>
-<span class="welcome">Welcome to LRS Project</span>
+<div class="welcome">Welcome to LRS Project</div>
+</div>
 
