--- a/FrontEnd/src/app/alertfiles/alert.component.html
+++ b/FrontEnd/src/app/alertfiles/alert.component.html
@@ -1,8 +1,8 @@
-<div *ngIf="alertService.messages.length">
-
-  <h2>Messages</h2>
-  <button type="button" class="clear"
-          (click)="alertService.clear()">Clear messages</button>
-  <div *ngFor='let message of alertService.messages'> {{message}} </div>
-
+<div *ngFor="let alert of alerts" class="alert" [ngClass]="className(alert)">
+    <div class="title">
+      <div class="mess">{{alert.title}}</div>
+      <div class="but"> <button (click)="close(alert)">X</button></div>
+    </div>
+    <div class="message">{{alert.message}}</div>
 </div>
+
