--- a/FrontEnd/src/app/app.component.css
+++ b/FrontEnd/src/app/app.component.css
@@ -1,69 +1,25 @@
-host {
+/* host {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 15px;
   color: rgb(0, 0, 0);
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-/*
+} */
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin: 8px 0;
-}
-
-h5 {
-  padding-left: 30px;
-  font-size: large;
-}
-
-p {
-  margin: 0;
-}
-
-.spacer {
-  flex: 1;
-}
-*/
-.toolbar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  height: 70px;
-  display:block;
-  align-items: center;
-  background-color: #0655a0;
-  color: white;
-  /* font-weight: 600; */
-}
 .main {
   display: flex;
-  margin: 82px auto 32px;
-  padding: 0 16px;
-  max-width: 960px;
-
-
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
 }
+
+
+
 .map {
- /*  display: flex;
-  margin: 82px auto 32px;
-  padding: 0 16px;
-  max-width: 960px;
- */
-  /* flex-direction: column;
-  align-items: center; */
   height: 700px;
-  /*display: block;
-  position: fixed;
-  top: 100px;
-  left: 50px;
-  right: 50px; */
 }
 
 
