--- a/FrontEnd/src/app/app.component.html
+++ b/FrontEnd/src/app/app.component.html
@@ -1,12 +1,7 @@
-<div class="toolbar">
-  <app-menu></app-menu>
-</div>
-
-<div class="main" *ngIf="isMap()==false">
-  <router-outlet></router-outlet>
-</div>
-<div class="map" *ngIf="isMap()==true">
-  <router-outlet></router-outlet>
-</div>
+<app-menu></app-menu>
+<router-outlet class="main" *ngIf="isMap()==false"></router-outlet>
+<router-outlet class="map" *ngIf="isMap()==true"></router-outlet>
 <app-alert></app-alert>
+
+
 
