--- a/FrontEnd/src/app/navfiles/home/home.component.css
+++ b/FrontEnd/src/app/navfiles/home/home.component.css
@@ -1,3 +1,9 @@
-h1{
+.home{
+  align-self: center;
   text-align: center;
+  font-size: 40px;
+  font-weight: bolder;
+  font-family: Arial, Helvetica, sans-serif;
+  color: darkblue;
+  margin-top: 200px;
 }
