--- a/FrontEnd/src/app/navfiles/menu/menu.component.css
+++ b/FrontEnd/src/app/navfiles/menu/menu.component.css
@@ -1,13 +1,19 @@
-.topnav {
-  background-color: transparent;
-  overflow: hidden;
-  display:inline-flex;
+.container {
+  display: flex;
   flex-direction: row;
-  margin-top: 8px;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  align-items: center;
+  height: 70px;
+  background-color: #0655a0;
+  color: white;
 }
 
-.topnav a {
-  /* float: left; */
+.navbuttons {
+  background-color: transparent;
+}
+
+.navbuttons a {
   color: #f2f2f2;
   text-align: center;
   padding: 15px 15px;
@@ -17,27 +23,24 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
-
-.topnav a:hover {
+.navbuttons a:hover {
   background-color: #dcdbecfa;
   color: black;
 }
 
-
-.topnav a.current {
+.navbuttons a.current {
   background-color: #756de6fa;
   color: white;
 }
 
 .welcome {
-  float: right;
-  margin-top: 8px;
+  background-color: transparent;
   color: #f2f2f2;
-  text-align: center;
   padding: 15px 15px;
   text-decoration: none;
   font-size: 20px;
   font-weight: bolder;
+  font-style: italic;
   font-family: Arial, Helvetica, sans-serif;
 }
 
