--- a/FrontEnd/src/app/userfiles/user-add/user-add.component.html
+++ b/FrontEnd/src/app/userfiles/user-add/user-add.component.html
@@ -1,46 +1,56 @@
-<table>
-  <caption>Add new user</caption>
-  <tbody>
-    <tr>
-      <th scope="row">Name</th>
-      <td><input id="Name" #name type="text" [(ngModel)]="nuser.name" placeholder="Name"/></td>
-    </tr>
-    <tr>
-      <th scope="row">Surname</th>
-      <td><input id="Surname" #surname type="text" [(ngModel)]="nuser.surname" placeholder="Surname"/></td>
-    </tr>
-    <tr>
-      <th scope="row">Date of Birth</th>
-      <td><input id="Date of Birth" #date type="date" [ngModel]="nuser.birthDate  | date:'yyyy-MM-dd'"  (ngModelChange)="nuser.birthDate = $event" /></td>
-    </tr>
-    <tr>
-      <th scope="row">Email</th>
-      <td><input id="Email" #emailAddress type="email" [(ngModel)]="nuser.emailAddress" placeholder="Email"/></td>
-    </tr>
-  <tr>
-    <tr>
-      <th scope="row">User Title</th>
-      <td>
-        <select id="UserTitle" [(ngModel)]="nuser.userTitleId" (change)="onSelectTitle($any($event.target).value)">  <option disabled value='null'>-- Select One --</option>
-        <option *ngFor="let t of titles" [value]="t.id">{{t.description}}</option> </select>
-      </td>
-    </tr>
-    <tr>
-      <th scope="row">User Type</th>
-      <td>
-        <select id="UserType" [(ngModel)]="nuser.userTypeId" (change)="onSelectType($any($event.target).value)">  <option disabled value='null'>-- Select One --</option>
-        <option *ngFor="let t of types" [value]="t.id">{{t.description}}</option> </select>
-      </td>
-    </tr>
-  </tbody>
-</table>
+<div class="container">
+  <div  class="title">
+    <h2>Add a new user</h2>
+  </div>
 
-<div class="warning">{{warningmsg}}</div>
+  <table>
+    <tbody>
+      <tr>
+        <th scope="row">Name</th>
+        <td><input id="Name" #name type="text" [(ngModel)]="nuser.name" placeholder="Name"/></td>
+      </tr>
+      <tr>
+        <th scope="row">Surname</th>
+        <td><input id="Surname" #surname type="text" [(ngModel)]="nuser.surname" placeholder="Surname"/></td>
+      </tr>
+      <tr>
+        <th scope="row">Date of Birth</th>
+        <td><input id="Date of Birth" #date type="date" [ngModel]="nuser.birthDate  | date:'yyyy-MM-dd'"  (ngModelChange)="nuser.birthDate = $event" /></td>
+      </tr>
+      <tr>
+        <th scope="row">Email</th>
+        <td><input id="Email" #emailAddress type="email" [(ngModel)]="nuser.emailAddress" placeholder="Email"/></td>
+      </tr>
+    <tr>
+      <tr>
+        <th scope="row">User Title</th>
+        <td>
+          <select id="UserTitle" (nginit) = 'null' (ngModel)="nuser.userTitleId" (change)="onSelectTitle($any($event.target).value)">
+            <option disabled value='null'>-- Select One --</option>
+            <option *ngFor="let t of titles" [value]="t.id">{{t.description}}</option>
+          </select>
+        </td>
+      </tr>
+      <tr>
+        <th scope="row">User Type</th>
+        <td>
+          <select id="UserType" (nginit) = 'null' (ngModel)="nuser.userTypeId" (change)="onSelectType($any($event.target).value)">
+            <option disabled value='null'>-- Select One --</option>
+            <option *ngFor="let t of types" [value]="t.id">{{t.description}}</option>
+          </select>
+        </td>
+      </tr>
+    </tbody>
+  </table>
 
-<div>
-<button (click)="addnew(nuser)">Save</button>
+  <div class="bar">
+    <button (click)="addnew(nuser)">Save</button>
+  </div>
 
-<br>
-<br>
-<button (click)="goBack()">Go Back</button></div>
+  <div class="bar">
+    <button (click)="goBack()">Go Back</button>
+  </div>
+
+</div>
+
 
