--- a/FrontEnd/src/app/mapfiles/map.component.html
+++ b/FrontEnd/src/app/mapfiles/map.component.html
@@ -1,2 +1,3 @@
-<!-- Map Div -->
-<div #mapViewNode class = "map" ></div>
+<div #mapDiv class = "map" ></div>
+<div #galleryDiv class="gallery"></div>
+
