--- a/FrontEnd/src/app/userfiles/users/users.component.html
+++ b/FrontEnd/src/app/userfiles/users/users.component.html
@@ -29,6 +29,8 @@
 </table>
 
 <div class="bar">
-  <a routerLink="/../addnew"><button *ngIf="results==false"> Add</button></a></div>
+  <a routerLink="/../addnew"><button *ngIf="results==false"> Add</button></a>
+</div>
+
 </div>
 
