--- a/FrontEnd/src/app/userfiles/user-detail/user-detail.component.html
+++ b/FrontEnd/src/app/userfiles/user-detail/user-detail.component.html
@@ -7,11 +7,13 @@
   <tbody>
       <tr>
         <th><label for="Name">Name</label></th>
-        <td><input id="Name" type="text" formControlName="name"/></td>
+        <td [class]="{'errorinput' : isFieldInvalid('name')}"><input id="Name" type="text" formControlName="name"/></td>
+        <td *ngIf="isFieldInvalid('name')" class="warn">Required Field</td>
       </tr>
       <tr>
         <th><label for="Surname">Surname</label></th>
-        <td><input id="Surname" type="text" formControlName="surname"/></td>
+        <td [class]="{'errorinput' : isFieldInvalid('surname')}"><input id="Surname" type="text" formControlName="surname"/></td>
+        <td *ngIf="isFieldInvalid('surname')" class="warn">Required Field</td>
       </tr>
       <tr>
         <th><label for="Date of Birth">Date of Birth</label></th>
@@ -23,21 +25,23 @@
       </tr>
       <tr>
         <th><label for="UserTitleId">User Title</label></th>
-        <td>
+        <td [class]="{'errorinput' : isFieldInvalid('userTitleId')}">
           <select id="UserTitleId" formControlName="userTitleId">
             <option disabled value=0>-- Select One --</option>
             <option *ngFor="let t of titles" [value]="t.id">{{t.description}}</option>
           </select>
         </td>
+        <td *ngIf="isFieldInvalid('userTitleId')" class="warn">Required Field</td>
       </tr>
       <tr>
         <th><label for="UserTypeId">User Type</label></th>
-        <td>
+        <td [class]="{'errorinput' : isFieldInvalid('userTypeId')}">
           <select id="UserTypeId" formControlName="userTypeId">
             <option disabled value=0>-- Select One --</option>
             <option *ngFor="let t of types" [value]="t.id">{{t.description}}</option>
           </select>
         </td>
+        <td *ngIf="isFieldInvalid('userTypeId')" class="warn">Required Field</td>
       </tr>
     </tbody>
   </table>
@@ -48,6 +52,8 @@
 
   <div class="bar">
     <button (click)="goBack()">Go Back</button>
+    <button (click)="delete()">Delete</button>
   </div>
-
+  <div class="bottom"></div>
 </div>
+
