--- a/FrontEnd/src/app/userfiles/allusers.css
+++ b/FrontEnd/src/app/userfiles/allusers.css
@@ -10,14 +10,22 @@
 .title{
   text-align: center;
   margin-top: 100px;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #0655a0;
 }
 
 .title h2 {
-  font-size: 20px;
+  font-size: 22px;
   font-weight: bolder;
-  font-family: Arial, Helvetica, sans-serif;
-  color: darkblue;
+
 }
+
+.title h4 {
+  font-size: 15px;
+  font-weight: lighter;
+  font-style: italic;
+}
+
 
 form {
   display: flex;
@@ -27,6 +35,11 @@ form {
   align-content: center;
   align-items: center;
 
+}
+
+input[type="checkbox"] {
+  margin-left: 10px;
+  border-color: #0655a0;
 }
 
 .bar {
@@ -61,17 +74,18 @@ form {
 
 table {
   margin-top: 20px;
-  border: 2px solid;
-  border-color: #0655a0;
-  border-collapse: collapse;
+  border-collapse:separate;
+  border-spacing: 0px;
+  border: 0.5px solid;
+  border-color: #9ebbd6;
   font-family: Arial, Helvetica, sans-serif;
 }
 
-th{
+th {
   background-color: #0655a0;
   color: white;
   padding: 10px;
-  border: 1px solid;
+  border: 0.5px solid;
   border-color: #9ebbd6;
   font-size: 12px;
   text-align: left;
@@ -79,7 +93,7 @@ th{
 
 td {
   padding: 10px;
-  border: 1px solid;
+  border: 0.5px solid;
   border-color: #9ebbd6;
   font-size: 15px;
 }
@@ -97,6 +111,17 @@ select {
   border: none;
   margin: 0;
   width: 100%;
+}
+
+.errorinput{
+  border: 1px solid;
+  border-color:red;
+}
+.warn {
+  border:none;
+  position: absolute;
+  font-size: 10px;
+  color:red;
 }
 
 select:focus-visible {
@@ -123,3 +148,11 @@ td .actbuttons button:hover {
   color: white;
   font-size: 12px;
 }
+
+.bottom {
+  height: 100px;
+}
+
+
+
+
